Fix background image align

--- a/assets/scss/shared-styles.scss
+++ b/assets/scss/shared-styles.scss
@@ -17,16 +17,21 @@
     }
 }
 
-.image--background--secondary {
+.image-background--secondary {
     border-radius: 0.625rem;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 10px;
-    left: -10px;
     right: 0;
     bottom: 0;
     background-color: $secondary-colour;
+    &.left-align {
+        left: 10px;
+    }
+    &.right-align {
+        left: -10px;
+    }
 }
 
 @media (min-width: $breakpoint-large) {
